Add print button to brexit checker results

--- a/config/locales/en/brexit_checker/results.yml
+++ b/config/locales/en/brexit_checker/results.yml
@@ -31,3 +31,4 @@ en:
           heading: You and your family
         business:
           heading: Your business or organisation
+      print_link: Print your results
