Add share links to brexit checker results

--- a/config/locales/en/brexit_checker/results.yml
+++ b/config/locales/en/brexit_checker/results.yml
@@ -15,6 +15,7 @@ en:
         Subscribe to updates about changes that may affect you and get a link to your results
       email_sign_up_link_no_actions: |
         This may change. Subscribe to email alerts about changes to Brexit information that may affect you.
+      share_link_title: Share your results
       social_media_meta:
         title: "Brexit: check what you need to do if there is no deal"
         description: |
