Update no actions content to baseline copy

--- a/config/locales/en/brexit_checker/action_audiences.yml
+++ b/config/locales/en/brexit_checker/action_audiences.yml
@@ -1,4 +1,4 @@
 en:
   brexit_checker:
     action_audiences:
-      no_results: This is a safe and secure service. We don't store any of your personal information.
+      no_results: There are no actions you need to take now.
