--- a/config/locales/en/brexit_checker/results.yml
+++ b/config/locales/en/brexit_checker/results.yml
@@ -1,13 +1,12 @@
 en:
   brexit_checker:
     results:
-      title: "Get ready for a no-deal Brexit: Your results"
-      title_no_actions: You do not need to take action
+      title_no_actions: You do not need to take action now
       title_no_answers: You did not answer any of the questions
       description: |
         You may not need to take all these actions now. Actions you need to take will depend on your own circumstances.
       description_no_actions: |
-        Based on your responses, you do not need to take any action to prepare for a no-deal Brexit.
+        Based on your responses, you do not need to take any action to prepare for the new rules from 1 January 2021.
       description_no_answers: |
         To change your answers, follow the link below. This is a safe and secure service. We do not store any of your personal information.
       email_sign_up_title: What you need to do may change
