--- a/config/locales/en/brexit_checker/breadcrumbs.yml
+++ b/config/locales/en/brexit_checker/breadcrumbs.yml
@@ -3,6 +3,6 @@ en:
     breadcrumbs:
       home: Home
       brexit-home: Brexit
-      brexit-check: "Brexit: check what you need to do"
+      brexit-check: "Check how to get ready for new rules in 2021"
       questions: Questions
       results: Results
