Change question title to baseline content

--- a/config/locales/en/brexit_checker/show.yml
+++ b/config/locales/en/brexit_checker/show.yml
@@ -1,4 +1,4 @@
 en:
   brexit_checker:
     show:
-      title: "Brexit: check what you need to do if there is no deal"
+      title: "How to get ready for new rules in 2021"
