--- a/config/locales/en/brexit_checker/breadcrumbs.yml
+++ b/config/locales/en/brexit_checker/breadcrumbs.yml
@@ -2,7 +2,7 @@ en:
   brexit_checker:
     breadcrumbs:
       home: Home
-      brexit-home: Brexit
+      brexit-home: Transition period
       brexit-check: "Check how to get ready for new rules in 2021"
       questions: Questions
       results: Your results
