--- a/config/locales/en/brexit_checker/results.yml
+++ b/config/locales/en/brexit_checker/results.yml
@@ -7,7 +7,7 @@ en:
       description: |
         You may not need to take all these actions now. Actions you need to take will depend on your own circumstances.
       description_no_actions: |
-        Based on your responses, you do not need to take any action to prepare for the new rules from 1 January 2021.
+        Based on your responses, you do not need to take any action to prepare for new rules from 1 January 2021.
       description_no_answers: |
         <p class="govuk-body-l">To change your answers, follow the link below.</p>
         <p class="govuk-body-l">This is a safe and secure service. We do not store any of your personal information.</p>
@@ -15,7 +15,7 @@ en:
       email_sign_up_link: |
         Subscribe to email updates about changes that may affect you and get a link to your results
       email_sign_up_link_no_actions: |
-        This may change. Subscribe to email alerts about changes to Brexit information that may affect you.
+        Subscribe to email updates about changes that may affect you and get a link to your results
       share_link_title: Share your results
       social_media_meta:
         title: "How to get ready for new rules in 2021: Your results"
