--- a/config/locales/en/brexit_checker/email_signup.yml
+++ b/config/locales/en/brexit_checker/email_signup.yml
@@ -2,8 +2,9 @@ en:
   brexit_checker:
     email_signup:
       title: "How to get ready for new rules in 2021"
-      sign_up_heading: "Get email alerts"
+      sign_up_heading: "Get email alerts about your results"
       sign_up_message: |
-        <p class="govuk-body">You are signing up for email updates about how to prepare for new rules from 1 January 2021.</p>
-        <p class="govuk-body">This will include information about the transition period including what you, your family, or your business can do to prepare for new rules.</p>
+        <p class="govuk-body">You're signing up for email updates about changes to your results because of any additional arrangements between the UK and EU.</p>
+        <p class="govuk-body">The emails will tell you what you, your family, or your business should do to prepare for new rules from 1 January 2021.</p>
+        <p class="govuk-body">You will only get updates based on your results.</p>
       sign_up_button: Subscribe
