--- a/config/locales/en/brexit_checker/account_signup.yml
+++ b/config/locales/en/brexit_checker/account_signup.yml
@@ -24,3 +24,7 @@ en:
       do_not_want_intro: You can
       do_not_want_link: get notifications and a link to your results
       do_not_want_outro: instead.
+    confirm_changes:
+      title: Update
+      heading: Update
+      save_button: Save
