Add urgency text to translation files

--- a/config/locales/en/brexit_checker/results.yml
+++ b/config/locales/en/brexit_checker/results.yml
@@ -4,6 +4,7 @@ en:
       title: "How to get ready for new rules in 2021: Your results"
       title_no_actions: You do not need to take action now
       title_no_answers: You did not answer any of the questions
+      urgent: Urgent
       description: |
         You may not need to take all these actions now. Actions you need to take will depend on your own circumstances.
       description_no_actions: |
