Amend the breadcrumb on the brexit checker results page
- We have changed the taxon name back to Brexity things. The
breadcrumbs on the checker should reflect this.

--- a/config/locales/en/brexit_checker/breadcrumbs.yml
+++ b/config/locales/en/brexit_checker/breadcrumbs.yml
@@ -2,6 +2,6 @@ en:
   brexit_checker:
     breadcrumbs:
       home: Home
-      brexit-home: Transition period
+      brexit-home: Brexit transition
       questions: Questions
       results: Your results
