--- a/config/locales/en/brexit_checker/results.yml
+++ b/config/locales/en/brexit_checker/results.yml
@@ -1,7 +1,7 @@
 en:
   brexit_checker:
     results:
-      title: "How to get ready for new rules in 2021: Your results"
+      title: "Brexit checker results: what you need to do"
       title_no_actions: You do not need to take action now
       title_no_answers: You did not answer any of the questions
       urgent: Urgent
@@ -19,7 +19,7 @@ en:
         Subscribe to email updates about changes that may affect you and get a link to your results
       share_link_title: Share your results
       social_media_meta:
-        title: "How to get ready for new rules in 2021: Your results"
+        title: "Brexit checker results: what you need to do"
         description: |
           What you, your family, or your business can do now to prepare for new rules from 1 January 2021.
       criteria:
