Update content and formatting for change type
Previously this was normal text and verbose. The new design calls
for shorter content in the form of a heading, now that the checker
has full control of the email body content (see previous commit).

--- a/config/locales/en/brexit_checker_mailer/change_notification.yml
+++ b/config/locales/en/brexit_checker_mailer/change_notification.yml
@@ -3,5 +3,5 @@ en:
     change_notification:
       guidance_prompt: Read the guidance
       title: Brexit checker results
-      addition: A new action has been added
-      content_change: An action has been updated
+      addition: New action
+      content_change: Updated action
