--- a/config/locales/en/brexit_checker_mailer/change_notification.yml
+++ b/config/locales/en/brexit_checker_mailer/change_notification.yml
@@ -2,6 +2,6 @@ en:
   brexit_checker_mailer:
     change_notification:
       guidance_prompt: Read the guidance
-      title: Your transition period results
+      title: Brexit checker results
       addition: A new action has been added
       content_change: An action has been updated
