--- a/config/locales/en/brexit_checker/breadcrumbs.yml
+++ b/config/locales/en/brexit_checker/breadcrumbs.yml
@@ -2,6 +2,6 @@ en:
   brexit_checker:
     breadcrumbs:
       home: Home
-      brexit-home: Brexit transition
+      brexit-home: Brexit
       questions: Questions
       results: Your results
