--- a/config/locales/en/brexit_checker/retirement.yml
+++ b/config/locales/en/brexit_checker/retirement.yml
@@ -4,4 +4,4 @@ en:
       title: "The Brexit checker will be removed on 30 November 2021"
       description: >
         <p class="govuk-body">From 30 November you will no longer be able to use the Brexit checker or see your results.</p>
-        <p class="govuk-body">You can continue to find out how Brexit affects you, your business and your family by visiting <a href="/brexit">gov.uk/brexit</a><p>
+        <p class="govuk-body">You can continue to find out how Brexit affects you, your business and your family by visiting <a href="/brexit" class="govuk-link">gov.uk/brexit</a><p>
